--- a/var/view_preprocessed/pub/static/frontend/Garcia/Javi/en_US/css/styles-l.css
+++ b/var/view_preprocessed/pub/static/frontend/Garcia/Javi/en_US/css/styles-l.css
@@ -2161,7 +2161,46 @@ span.klarna-payments-method-cell > img {
     margin: 0;
   }
   .title {
+    border: 1px solid black;
+    border-radius: 0.7rem;
     color: #7d2717;
+    text-align: center;
+    background-color: #9b9b9b;
+  }
+  #cantidad {
+    border: 1px solid black;
+    border-radius: 0.7rem;
+    text-align: center;
+    font-weight: bold;
+    color: #7d2717;
+    background-color: #9b9b9b;
+  }
+  #final {
+    border: 1px solid black;
+    border-radius: 0.7rem;
+    background-color: #d57474;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+  }
+  #final:nth-child(odd) {
+    margin-left: 20px;
+  }
+  #aprobado {
+    border: 1px solid black;
+    border-radius: 0.7rem;
+    background-color: lightgreen;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+  }
+  #suspenso {
+    border: 1px solid black;
+    border-radius: 0.7rem;
+    background-color: #cb4040;
+    color: black;
+    font-weight: bold;
+    text-align: center;
   }
 }
 @media all and (min-width: 1024px), print {
